[project]
name = "pitwall"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.9.0",
    "orjson>=3.11.1",
    "pysignalr>=1.3.0",
]

[dependency-groups]
dev = [
    "flake8-pytest-style>=2.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
    "ty>=0.0.1a16",
]

[[tool.uv.index]]
url = "https://pypi.svc.kat5.dev/index"
