[project]
name = "pitwall"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.11.0",
    "orjson>=3.11.1",
    "pysignalr>=1.3.0",
]

[project.optional-dependencies]
homeassistant = [
    "homeassistant-api>=4.2.2.post2",
]
rabbit = [
    "aio-pika>=9.5.7",
    "pika>=1.3.2",
]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "flake8-pytest-style>=2.1.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
    "twine>=6.2.0",
    "ty>=0.0.1a16",
    "colorist>=1.8.5",
    "easyocr>=1.7.2",
]
